--- a/index.html
+++ b/index.html
@@ -307,8 +307,8 @@
         <div class="header-left">
             <button class="toggle-sidebar-btn" id="sidebarToggle" title="Minimizar/Expandir Menu">☰</button>
             <div>
-                <h1>Estúdio Generativo</h1>
-                <div style="font-size: 0.8rem; color: #64748b;">Versão Profissional HD</div>
+                <h1>Gerador de Arte Geométrica</h1>
+                <div style="font-size: 0.8rem; color: #64748b;"></div>
             </div>
         </div>
     </header>
@@ -1073,3 +1073,4 @@
     </script>
 </body>
 </html>
+
