--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                     <label class="shape-option"><input type="checkbox" value="triangle"> Triâng</label>
                     <label class="shape-option"><input type="checkbox" value="line"> Linhas</label>
                 </div>
-                <button id="btnOpenCreator" class="btn btn-create">➕ Importar Forma</button>
+                <button id="btnOpenCreator" class="btn btn-create">➕Crie Formas</button>
             </div>
             
             <hr style="border:0; border-top:1px solid var(--border); width: 100%;">
@@ -1003,3 +1003,4 @@
     </script>
 </body>
 </html>
+
